# wb_api_manager

./: .gitignore  README.md  app.py  config.py  project_analysis.txt  project_analyzer.py  pyproject.toml  requirements.txt
api/: wb_account_routes.py  wb_card_routes.py
controllers/: wb_account_controller.py  wb_card_controller.py
data/: database.py  models.py  repositories.py  wb_api.py
services/: wb_account_service.py  wb_card_service.py
utils/: logger.py
